# aba-deep-learning

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: ci.yml  fetch-ranked-inventory.yml  finalize-ranked-v1.yml  patch-windows-relative-path.yml  train-anonymized-relay.yml  validate.yml
contracts/: feature_schemas_v1.json
datasets/metadata/: ranked_explicit_v3_v1.json  (+3 more)
docs/: DATASET.md  FEATURE_SCHEMAS.md  RANKED_DATASET_V1.md
evidence/: ci-episode-splits-probe.txt  ci-schema-safe-v04-probe.txt  human-policy-release-gate-v2.json  ranked-capture-v2-closure.json  ranked-dataset-v1-validation.json  ranked-temporal-mlp-v0-rejection.json  ranked-watcher-bootstrap-v010-validation.json  ranked-watcher-v023-validation.json  step2-live-proof-2026-07-21.json
runtime_luau/: RankedPassiveWatcherV2.manifest.json  RankedPassiveWatcherV2.runtime.luau  RankedWatcherBootstrap.manifest.json  RankedWatcherBootstrap.runtime.luau  collector_bundle.client.luau
scripts/: build_dataset.py  build_ranked_release.py  evaluate_ranked.py  inspect_ranked_stream.py  plan_episode_splits.py  run_shadow_mode.py  train_anonymized_relay.py  train_ranked.py  validate_evidence.py  validate_ranked_release.py
tests/: test_collector_source.py  test_contracts.py  test_dataset.py  test_episode_splits.py  test_evidence.py  test_feature_schema_registry_parity.py  test_ranked_imitation_v1.py  test_ranked_release_v1.py  test_ranked_shadow_v1.py  test_ranked_stream.py  test_ranked_stream_v3.py  test_ranked_watcher_bootstrap_source.py  test_ranked_watcher_source.py  test_stream_mask_policy.py
(+34 files in other folders)
