[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aba-deep-learning"
version = "0.3.0"
description = "Contracts, authoritative collection, and deterministic dataset preparation for a hybrid learned ABA agent"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
