[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aba-deep-learning"
version = "0.4.0"
description = "Schema-safe contracts, collection, and dataset preparation for a hybrid learned ABA agent"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
