[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aba-deep-learning"
version = "0.5.0"
description = "Schema-safe dataset preparation, recurrent imitation learning, evaluation, and prediction-only shadow mode for an authorized ABA developer environment"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ml = [
  "numpy>=1.26",
  "torch>=2.3",
  "lz4>=4.3"
]

[tool.setuptools.packages.find]
where = ["src"]
